# Klein

./: .gitignore  CI_CD_GUIDE.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE_GUIDE.md  SECURITY.md  WORKFLOW_EXPLANATION.md  demo.ps1  install.ps1  install.sh  log_path.rs
.github/workflows/: codeql.yml  release.yml  test-installers.yml
src/: app.rs  bin_test_color.rs  bin_test_vt100.rs  config.rs  editor.rs  lib.rs  main.rs  micro_editor.rs  search.rs  sidebar.rs  tabs.rs  terminal.rs  theme.rs  theme_loader.rs  theme_registry.rs
src/events/: klein_event.rs  mod.rs  timers.rs
src/lsp/: actor.rs  capabilities.rs  codec.rs  doc_sync.rs  manager.rs  mod.rs  registry.rs  router.rs  types.rs
src/treesitter/: mod.rs
src/ui/: completion.rs  editor.rs  help.rs  hover.rs  layout.rs  mod.rs  picker.rs  rename.rs  sidebar.rs  status_bar.rs  tabs.rs  terminal.rs  top_bar.rs
themes/: dark.toml  dracula.toml  funky.toml  light.toml  monokai.toml  nord.toml  solarized-dark.toml
