[package]
name = "klein"
version = "0.4.0"
edition = "2021"
authors = ["Adarsh"]
license = "Apache-2.0"
repository = "https://github.com/Adarsh-codesOP/Klein"
description = "A professional terminal-based text editor with IDE-like features"

[dependencies]
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
syntect = "5.1"
portable-pty = "0.8"
ropey = "1.6"
arboard = "3.3"
walkdir = "2.4"
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
toml = "1.0.4"
clap = { version = "4.0", features = ["derive"] }
vt100 = "0.16.2"
chrono = "0.4"
ignore = "0.4"
fuzzy-matcher = "0.3"
regex = "1.10"
grep-searcher = "0.1"
grep-regex = "0.1"
rayon = "1.8"
